--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -6,7 +6,9 @@
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.spriteshape": "5.1.5",
     "com.unity.2d.tilemap": "1.0.0",
+    "com.unity.addressables": "1.18.19",
     "com.unity.ads": "3.7.5",
+    "com.unity.assetbundlebrowser": "https://github.com/Unity-Technologies/AssetBundles-Browser.git",
     "com.unity.collab-proxy": "1.13.5",
     "com.unity.ide.rider": "2.0.7",
     "com.unity.ide.visualstudio": "2.0.11",
